# nifty-satvik

./: .dockerignore  .gitignore  .mcp.json  BUILD_SPEC.md  CLAUDE.md  README.md  config.py  fly.toml  pyproject.toml
.githooks/: pre-commit
data/: corporate_actions_demergers.csv  delisted_alias_map.json  fundamentals_pit_screener.pkl  macro_data.pkl  macro_pit.parquet  nifty500_membership.csv  nifty500_official_20250720.csv  ohlcv_backfill_manifest.json  problem_sector_map.json  sector_intelligence.pkl
deploy/: DROPLET_KITE_REFRESH.md  Dockerfile  supabase_schema.sql
docs/: BHANUSHALI_REPRODUCE.md  BHANUSHALI_STRATEGY.md  BHANUSHALI_TEST_LOG.md  DATA_AND_ARTIFACTS.md  DEPENDENCY_MAP.md  DESTINATION.md  EXECUTION_CAPTURE_SPEC.md  FRONTEND_DEPENDENCY_MAP.md  GUARDRAILS_RESEARCH_VS_PRODUCT.md  LIVE_OVERLAY_PROTOCOL.md  LOCK_PLAN.md  NEXT_SESSION_KICKOFF.md  NiftyQuant.md  OPERATING_MODEL.md  PRODUCT_LAYERS_BRAINSTORM.md  PRODUCT_STATE_AND_DATA.md  PRODUCT_SYNTHESIS.md  QUESTIONING_THE_FOUNDATIONS.md  ROADMAP.md  STAGE_A_PLAN.md  STAGE_E_DASHBOARD_DEPLOY.md  STAGE_F_KITE_ACTIVATION.md  SYSTEM.md  WEEKLY_SWING_STRATEGY.md  paper_portfolio_schema.md  survivorship_fix.md
forward/: prereg.md  prereg_swing.md
frontend/: package-lock.json  package.json  tailwind.config.js  vercel.json
long_horizon/: STRATEGY.md  STRATEGY_FULL.md  brain.md  charter.md
nq/: __init__.py
research/: CONTEXT_ROUTER_SPEC.md  OVERNIGHT_LOG.md  OWNER_RULE_FAITHFUL_SPEC.md  PROBLEM_STATEMENT_sharpe_sortino_dd.md  RESEARCH_PLAN_swing.md  RESEARCH_PLAN_tail_hedge_and_loop.md  STAGE_A_TRUST_RECORD.md  baseline_v0.json  baseline_v1.json  bhanushali_swing_rules.md  config_CHANGELOG.md  external_edge_ideas.md  overlay_registry.md  preregistry_603010_deeprunner.md  preregistry_7030_runner.md  preregistry_decouple.md  preregistry_intraweek_rotate.md  preregistry_lockin_live.md  preregistry_more_slots.md  preregistry_open_progress.md  preregistry_owner_discipline.md  preregistry_owner_variant.md  preregistry_pattern_exit.md  preregistry_slope5.md  preregistry_small_candle.md
results/: kill_state.json  paper_ledger_history.csv  paper_portfolio.json  paper_portfolio_weekly.json  paper_state.json  paper_trades.json  portfolio_history.csv  signal_analytics.json  (+9 more)
(+720 files in other folders)
